# pyriodic

./: .buildinfo  .buildinfo.bak  .gitignore  README.md  build_docs.sh  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  pyriodic.html  search.html  searchindex.js  tutorials.html
.doctrees/: environment.pickle  index.doctree  modules.doctree  pyriodic.doctree  tutorials.doctree
Installation/: index.html  installation_guide.html  installation_guide.ipynb
_sources/: index.rst  index.rst.txt  pyriodic.rst
api/: index.html  indexaaaa.html  pyriodic.html
contribute/: index.html
contributing/: contribution_guide.html  index.html
dataset/: dataset_info.html  index.html
datasets/: dataset_info.html  index.html
docs/: conf.py  genindex.html  index.html  index.rst  objects.inv  py-modindex.html  pyriodic.html  search.html  searchindex.js
docs_src/: conf.py  generate_tutorial_cards.py  index.rst  modules.html  modules.rst  requirements.txt  searchindex.js
install/: index.html  installation_guide.html
installation/: index.html  installation_guide.html
notebooks/: 01_getting_started.html  02_phase_diagnostics.html  02_phase_diagnostics.ipynb
pyriodic/: __init__.py  __init__.pyi  circular.py  density.py  desc.py  descriptive_stats.py  permutation.py  phase_events.py  preproc.py  regression.py  stats.py  stats_surrogate.py  surrogate.py  utils.py  visualise.py  viz.py
tests/: test_circular.py  test_phase_events.py
tutorials/: 01_getting_started.html  01_intro.html  01_intro.ipynb  02_phase_diagnostics.html  index.html  (+18 more)
(+175 files in other folders)
